fix login and registration forms alignment

--- a/angular-node-express-mysql-frontend/src/app/app.component.scss
+++ b/angular-node-express-mysql-frontend/src/app/app.component.scss
@@ -26,6 +26,7 @@
   width: 585px;
   height: 100vh;
   margin: 0 auto;
+  padding: 0 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
