--- a/angular-node-express-mysql-frontend/src/app/features/login/components/login-form/login-form.component.scss
+++ b/angular-node-express-mysql-frontend/src/app/features/login/components/login-form/login-form.component.scss
@@ -1,3 +1,5 @@
 .login-form {
-  width: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
